# Data2PointCloud

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: 3dmatch.py  mvp.py  shapenet.py
src/datasets/: three_d_match.py
tests/: test_my_module.py
